--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,14 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+    @* /**
+    * Radar JS SDK
+    * https://docs.radar.com/reference/javascript
+    **/ *@
     <script src="https://js.radar.com/v4.5.3/radar.min.js"></script>
+
+
 
 
     <style>
