--- a/Views/Browse/Summary.cshtml
+++ b/Views/Browse/Summary.cshtml
@@ -56,7 +56,7 @@
                             <div class="mt-1 flex items-center text-accent">
                                 <i data-feather="alert-circle" class="w-4 h-4 mr-1"></i>
 
-                                <span class="text-sm font-medium">@($"Only {Model.listing.QuantityAvailable} packs          left!")</span>
+                                <span class="text-sm font-medium">@($"Only {Model.listing.QuantityAvailable} packs               left!")</span>
                             </div>
                         }
                     </div>
@@ -94,7 +94,7 @@
                             <span class="font-medium">Location</span>
                         </div>
                         <p class="mt-2 font-semibold">@($"{Model.vendors.Address}")</p>
-                        <p class="text-sm text-gray-600">0.3 miles away</p>
+                        <p class="text-sm text-gray-600">less than a Kilometer away</p>
                     </div>
 
                     <div class="bg-light p-4 rounded-lg">
